--- a/html/PartnerWithUs.html
+++ b/html/PartnerWithUs.html
@@ -191,9 +191,9 @@
                     <li>
                         <h4>Our Menu</h4>
                     </li>
-                    <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Special</a></li>
-                    <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Popular</a></li>
-                    <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Category</a></li>
+                    <li class="mt-one"><a href="./index.html" class="footer-link">Special</a></li>
+                    <li class="mt-one"><a href="./index.html" class="footer-link">Popular</a></li>
+                    <li class="mt-one"><a href="./index.html" class="footer-link">Category</a></li>
                 </ul>
 
                 <ul class="footer-wrapper">
@@ -202,7 +202,7 @@
                     </li>
                     <li class="mt-one"><a href="./aboutUs.html" class="footer-link">About us </a></li>
                     <li class="mt-one"><a href="./PartnerWithUs.html" class="footer-link"> Partner with us</a></li>
-                    <li class="mt-one"><a href="./contactUs.html" class="footer-link"> FAQ's</a></li>
+                    <li class="mt-one"><a href="./faq.html" class="footer-link"> FAQ's</a></li>
                 </ul>
 
                 <ul class="footer-wrapper">
@@ -210,8 +210,8 @@
                         <h4>Support</h4>
                     </li>
                     <li class="mt-one"><a href="./signup.html" class="footer-link">Account</a></li>
-                    <li class="mt-one"><a href="./contactUs.html" class="footer-link"> Support center </a></li>
-                    <li class="mt-one"><a href="./contactUs.html" class="footer-link"> Feedback</a></li>
+                    <li class="mt-one"><a href="./supportCenter.html" class="footer-link"> Support center </a></li>
+                    <li class="mt-one"><a href="./feedback.html" class="footer-link"> Feedback</a></li>
                     <li class="mt-one"><a href="./contactUs.html" class="footer-link">Contact Us</a></li>
                 </ul>
             </div>
