--- a/html/checkout.html
+++ b/html/checkout.html
@@ -220,9 +220,9 @@
           <li>
             <h4>Our Menu</h4>
           </li>
-          <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Special</a></li>
-          <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Popular</a></li>
-          <li class="mt-one"><a href="../HTML/index.html" class="footer-link">Category</a></li>
+          <li class="mt-one"><a href="./index.html" class="footer-link">Special</a></li>
+          <li class="mt-one"><a href="./index.html" class="footer-link">Popular</a></li>
+          <li class="mt-one"><a href="./index.html" class="footer-link">Category</a></li>
         </ul>
 
         <ul class="footer-wrapper">
@@ -230,20 +230,20 @@
             <h4>Company</h4>
           </li>
           <li class="mt-one"><a href="#" class="footer-link"> Why Foodie</a></li>
-          <li class="mt-one"><a href="../HTML/PartnerWithUs.html" class="footer-link"> Partner with us</a></li>
-          <li class="mt-one"><a href="../HTML/aboutUs.html" class="footer-link"> About us </a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link"> FAQ's</a></li>
+          <li class="mt-one"><a href="./PartnerWithUs.html" class="footer-link"> Partner with us</a></li>
+          <li class="mt-one"><a href="./aboutUs.html" class="footer-link"> About us </a></li>
+          <li class="mt-one"><a href="./faq.html" class="footer-link"> FAQ's</a></li>
         </ul>
 
         <ul class="footer-wrapper">
           <li>
             <h4>Support</h4>
           </li>
-          <li class="mt-one"><a href="../HTML/signup.html" class="footer-link">Account</a></li>
-          <li class="mt-one"><a href="../HTML/supportCenter.html" class="footer-link"> Support center </a>
+          <li class="mt-one"><a href="./signup.html" class="footer-link">Account</a></li>
+          <li class="mt-one"><a href="./supportCenter.html" class="footer-link"> Support center </a>
           </li>
-          <li class="mt-one"><a href="../HTML/feedback.html" class="footer-link"> Feedback</a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link">Contact Us </a></li>
+          <li class="mt-one"><a href="./feedback.html" class="footer-link"> Feedback</a></li>
+          <li class="mt-one"><a href="./contactUs.html" class="footer-link">Contact Us </a></li>
         </ul>
       </div>
     </div>
