--- a/html/menu.html
+++ b/html/menu.html
@@ -159,17 +159,17 @@
         <ul class="footer-wrapper">
           <li><h4>Company</h4></li>
           <li class="mt-one"><a href="#" class="footer-link">Why Foodie</a></li>
-          <li class="mt-one"><a href="../HTML/PartnerWithUs.html" class="footer-link">Partner with us</a></li>
-          <li class="mt-one"><a href="../HTML/aboutUs.html" class="footer-link">About us</a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link">FAQ's</a></li>
+          <li class="mt-one"><a href="./PartnerWithUs.html" class="footer-link">Partner with us</a></li>
+          <li class="mt-one"><a href="./aboutUs.html" class="footer-link">About us</a></li>
+          <li class="mt-one"><a href="./faq.html" class="footer-link">FAQ's</a></li>
         </ul>
 
         <ul class="footer-wrapper">
           <li><h4>Support</h4></li>
-          <li class="mt-one"><a href="../HTML/signup.html" class="footer-link">Account</a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link">Support center</a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link">Feedback</a></li>
-          <li class="mt-one"><a href="../HTML/contactUs.html" class="footer-link">Contact Us</a></li>
+          <li class="mt-one"><a href="./signup.html" class="footer-link">Account</a></li>
+          <li class="mt-one"><a href="./supportCenter.html" class="footer-link">Support center</a></li>
+          <li class="mt-one"><a href="./feedback.html" class="footer-link">Feedback</a></li>
+          <li class="mt-one"><a href="./contactUs.html" class="footer-link">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -182,16 +182,31 @@
   <!-- Food Detail Modal -->
   <div id="foodModal" class="modal" aria-hidden="true">
     <div class="modal-content">
-      <span class="close back-to-top visible" aria-label="Close modal"><i class="fa-solid fa-arrow-left"></i></span>
-      <img id="modalImage" alt="Food Image" />
+      <button class="modal-close" aria-label="Close modal">
+        <i class="fa-solid fa-times"></i>
+      </button>
+      <div class="modal-image-container">
+        <img id="modalImage" alt="Food Image" />
+        <span id="modalType" class="food-type-badge"></span>
+      </div>
       <div id="card-content-container">
-        <h2 id="modalName"></h2>
-        <p id="modalPrice"></p>
-        <p id="modalDescription"></p>
+        <div class="modal-header">
+          <h2 id="modalName"></h2>
+          <div id="modalRating" class="modal-rating">
+            <i class="fa-solid fa-star"></i>
+            <span id="modalRatingValue"></span>
+          </div>
+        </div>
+        <p id="modalPrice" class="modal-price"></p>
+        <p id="modalDescription" class="modal-description"></p>
       </div>
       <div id="card-btn-container">
-        <button id="addToCartBtn">Add to Cart</button>
-        <button id="viewCartBtn">View Cart</button>
+        <button id="addToCartBtn" class="modal-btn-primary">
+          <i class="fa-solid fa-cart-plus"></i> Add to Cart
+        </button>
+        <button id="viewCartBtn" class="modal-btn-secondary">
+          <i class="fa-solid fa-bag-shopping"></i> View Cart
+        </button>
       </div>
     </div>
   </div>
