Initiated the Horror I have been facing for some Issues !!

--- a/html/faq-page.html
+++ b/html/faq-page.html
@@ -182,6 +182,10 @@
     © 2025 Foodie. All rights reserved.
   </footer>
 
+  <a href="https://wa.me/911234567890" class="whatsapp-fab" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp" title="Chat on WhatsApp">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
   <script>
     const toggleBtn = document.getElementById('themeToggle');
     const body = document.body;
