--- a/html/menu.html
+++ b/html/menu.html
@@ -390,9 +390,13 @@
     </div>
   </footer>
 
-  <a href="#home" class="back-to-top" aria-label="Back to top">
-    <i class="fa-solid fa-arrow-up"></i>
-  </a>
+  <a href="https://wa.me/911234567890" class="whatsapp-fab" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp" title="Chat on WhatsApp">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
+    <a href="#home" class="back-to-top" aria-label="Back to top">
+        <i class="fa-solid fa-arrow-up"></i>
+    </a>
 
   <!-- Food Detail Modal -->
   <div id="foodModal" class="modal" aria-hidden="true">
