--- a/html/nearbyres.html
+++ b/html/nearbyres.html
@@ -182,6 +182,10 @@
     </div>
   </footer>
 
+  <a href="https://wa.me/911234567890" class="whatsapp-fab" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp" title="Chat on WhatsApp">
+    <i class="fa-brands fa-whatsapp"></i>
+    </a>
+
   <a href="#home" class="back-to-top" aria-label="Back to top">
     <i class="fa-solid fa-arrow-up"></i>
   </a>
